feat(graph): making a graph for qlora + saving trainer state

--- a/.gitignore
+++ b/.gitignore
@@ -253,7 +253,7 @@ optimizer.pt
 scheduler.pt
 rng_state.pth
 training_args.bin
-trainer_state.json
+# trainer_state.json
 
 # Ignore large or unnecessary binaries except final adapter
 
